# mysimpletodos

./: Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/skills/daily-report/: SKILL.md
.github/skills/mst-cli/: SKILL.md
.github/skills/todo-api/: SKILL.md
.github/skills/todo-data-model/: SKILL.md
.github/workflows/: deploy.yml
app/: auth.py  config.py  csrf.py  main.py
app/routes/: backup.py  pages.py  settings.py  tasks.py
app/services/: api_key_service.py  backup_service.py
app/static/: app.css
app/templates/: auth_login.html  auth_setup.html  base.html  index.html  settings.html  tasks_list.html  today.html
cli/: README.md  pyproject.toml
cli/src/gtd_cli/: display.py  main.py
cli/src/gtd_cli/commands/: config_cmd.py  export.py  health.py  projects.py  tasks.py  views.py
cli/src/mst_cli/: __init__.py  client.py  config.py  display.py  main.py
cli/src/mst_cli/commands/: __init__.py  backup.py  config_cmd.py  export.py  health.py  projects.py  report.py  tasks.py  views.py
cli/tests/: conftest.py  test_client.py  test_commands_backup.py  test_commands_config.py  test_commands_export.py  test_commands_health.py  test_commands_projects.py  test_commands_report.py  test_commands_tasks.py  test_commands_views.py  test_config.py
docs/: Multi-User-Implementation-Plan.md  api.md  index.html  llm-integration.md
docs/plans/: API-Key-Auth-Implementation-Plan.md  Adaptive-Responsive-UX-Implementation-Plan.md  CLI-Implementation-Plan.md  Multi-User-Implementation-Plan.md  Passkey-Auth-Implementation-Plan.md  TODO-App-Implementation-Plan.md
scripts/: backup-db.sh  install-cli.sh
tests/: test_api_key_auth.py  test_api_key_service.py  test_auth_ui.py  test_backup.py  test_quick_update.py  test_responsive_css.py  test_responsive_layout.py  test_security_hardening.py  test_settings_page.py  test_task_workflows.py
