[project]
name = "mysimpletodos"
version = "0.1.0"
description = "Local-first TODO application built with FastAPI, HTMX-ready templates, and SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "itsdangerous>=2.0,<3.0",
  "jinja2>=3.1,<4.0",
  "markdown-it-py>=3.0,<4.0",
  "mdit-py-plugins>=0.4,<1.0",
  "nh3>=0.2,<1.0",
  "webauthn>=2.0,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlmodel>=0.0.22,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "responsive: structural and CSS-contract tests for the adaptive UX plan",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
