[project]
name = "mst-cli"
version = "0.1.0"
description = "Command-line interface for MySimpleTodos"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9.0",
    "httpx>=0.28,<1.0",
    "rich>=13.0,<14.0",
    "tomli_w>=1.0,<2.0",
]

[project.scripts]
mst = "mst_cli.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "respx>=0.22,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mst_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
